--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
 
-  "description": "Quickly change ROT HelixCore Settings",
+  "description": "Effortlessly change ROT HelixCore Settings",
   "manifest_version": 2,
   "name": "ROT Settings",
   "version": "53.0",
