--- a/popup/manifest.json
+++ b/popup/manifest.json
@@ -1,9 +1,9 @@
 {
 
-  "description": "Effortlessly change Luna helixCore settings",
+  "description": "Effortlessly change Luna's helixCore settings",
   "manifest_version": 2,
   "name": "Luna Quick Settings",
-  "version": "0.4.1",
+  "version": "0.5.0",
  
   "browser_action": {
     "browser_style": true,
